--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,10 @@ a:link, a:active, a:visited {
     margin: 0 auto;
 }
 /*Logo*/
+#logo h1 {
+    float: left;
+}
+
 #logo a {
     width: 248px;
     height: 21px;
@@ -55,5 +59,80 @@ nav ul li a:hover {
 /*Fim Navegação*/
 /*Fim header*/
 
+/*Conteúdo Principal*/
+#principal {
+    width: 710px;
+    float: left;
+}
+/*Fim Conteúdo Principal*/
 
+/*Barra Lateral*/
+aside {
+    width: 350px;
+    float: right;
+    padding-bottom: 30px;
+}
+
+section#visita {/*o id #visita sem espaços em relação ao section "section#visita", diz que: visita
+     é um id aplicado a tag section. Se eles estivessem separados "section #visita" seria: um id
+    #visita dentro da tag*/
+    background: #cdc8b1;
+    padding: 10px 27px 27px 27px;
+    margin-top: 10px;
+}
+
+h4 {
+    color: #86521a;
+    text-transform: uppercase;
+    padding-bottom: 3px;
+    margin-bottom: 0;
+}
+
+input {
+    height: 20px;
+    width: 80px;
+    background: #fff;
+    border: none;
+    font-size: 1em;
+}
+
+input.campo {
+    border: 1px solid #ada484;
+}
+
+input.botao {
+    background: #9b9271;
+    color: white;
+    width: 100%;
+    height: 40px;
+    font-size: 1.2em;
+}
+
+fieldset {
+    border: none;
+
+}
+
+legend {
+    display: none;
+}
+/*Galeria*/
+#galeria {
+    padding: 0 27px 0 27px;
+}
+
+section#galeria a {
+    display: block;
+    background: url(../images/fundo-foto.png) no-repeat;
+    float: left;
+    padding: 17px 15px 18px 15px;
+    margin: 10px 0 0 20px;
+}
+
+section#galeria img {
+    margin-left: 2px;
+    margin-top: 3px;
+}
+/*Fim Galeria*/
+/*Fim Barra Lateral*
 /*Fim Corpo do site*/
